# slots

./: Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2ee08b135213_.py  5126d24faf30_.py  9078641abad1_.py  e77e6f485efd_.py
app/adapters/abstract/: __init__.py  repository.py  unit_of_work.py
app/adapters/abstract/repositories/: spot.py  user.py
app/adapters/sql/: repository.py  unit_of_work.py
app/adapters/sql/mappings/: __init__.py  spot.py  user.py
app/adapters/sql/repositories/: spot.py  user.py
app/api/: dependencies.py  exceptions.py  main.py  spot.py  user.py
app/api/routes/: user.py
app/domain/: spot.py  user.py
app/service_layer/: user.py
db_terraform/: ec2.tf  outputs.tf  rds.tf  variables.tf  vpc.tf
terraform/: config.tf  ecs.tf  repository.tf  variables.tf  vpc.tf
tests/: conftest.py
tests/integration/: test_spot_repository.py  test_unit_of_work.py  test_user_repository.py  test_user_service.py
tests/unit/: test_spot.py  test_user.py
