[tool.poetry]
name = "slots"
version = "0.1.0"
description = ""
authors = ["Jean-Charles <jcbouchaud@42.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
pydantic = {extras = ["email"], version = "^2.5.2"}
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
